--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.18.0",
     "element-ui": "^2.4.11",
     "highlight.js": "^9.13.1",
+    "marked": "^0.6.0",
+    "moment": "^2.23.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -27,6 +29,8 @@
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^4.0.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17"
