--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
+    "colors": "^1.3.3",
+    "console-color-mr": "^2.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "html-loader": "^0.5.5",
     "markdown-loader": "^4.0.0",
+    "node-notifier": "^5.4.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17"
