--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bee-mui": "^0.0.1",
     "element-ui": "^2.4.11",
-    "highlight.js": "^9.13.1",
+    "highlight.js": "^9.15.6",
     "marked": "^0.6.0",
     "moment": "^2.23.0",
     "vue": "^2.5.17",
