--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "marked": "^0.6.0",
     "moment": "^2.23.0",
     "socket.io": "^2.2.0",
+    "velocity-animate": "^2.0.5",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
